--- a/todo.txt
+++ b/todo.txt
@@ -45,61 +45,19 @@ struct IRStmt {
 };
 
 
+****************Refactor**************
+Assembler::generate_obj requires massive refactor
+    too much confusing code/structure - each section appendment should be own function
+    section header m_name index into shstrtab is hardcoded
+    restructure code to make easier to understand/modify in the future
+    
+
 **********************Linker*******************************
-Make all symbols global/external for now without requiring explicitly marking them as such
-implement Assembler::generate_obj <--------------------------------
-    need to patch:
-        section header offset
-        section header count
-        section header size
-        section header string table index
-        ...maybe more - use readelf to compare against main.o
-    !!!use readelf to check if sections are correct
-
-    AstCall can't type check external globals now
-        could add 'import' keyword that packages all global function types in a given file
-            and adds them to a list of declared but undefined symbols
-
-            wouldn't that requiring parsing/compiling the entire imported module????
-            and what about circular dependencies???
-                could have assembler do two passes - need to track types of globals
-            or just infer types from usage of function - but would need to change how print works
-                since print can take ints or floats right now
-
-            !!!We need type information for globals (functions and variables)
-                when importing
-
-            Create a preprocessor that just grabs all globals from a file
-                just need to parse global function names and types and variable names and types
-                should be quick - but should reuse lexer/parser of semantic analyzer module
-                    make a new method called parse_global_types()
-                    use a stack to find end of function defintion quickly without parsing
-                    fill in m_globals in semant, then pass this Scope to assembler to type check external symbols
-            right now, assume everything is global
-                add a new preprocessor to semant.hpp/cpp
-                std::unordered_map<std::string , Symbol> globals = extract_globals(input_file);
-
-
-        add 'import' keyword to tamarind language
-        add extract_global_declarations to semant
-        extract globals from imported modules in assembler.hpp/cpp to type-check
-            make a vector of imported symbol maps
-            mainly need to redo type-checking in AstCall
-
-        import math
-
-        main: () -> int {
-            print(math::add(1, 2))
-        }
-
-
-        add: (a: int, b: int) -> int {
-            return a + b
-        }
-
-        arith: (first: (int, int) -> int, second: (int, int) -> int) -> bool {
-
-        }
+Make elf.h
+Write linker that combines .obj into an executable
+    Make main.tmd without imports for now
+    will need to put elf headers into new header file since assembler and linker will both need it
+    l.link(main.obj) and check if executable works
 
 
 Make class Elf32Linker
