--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,8 @@ Bug:
         the bash script needs to prefix from /build/src
         but python script doesn't since inside /test already
 
-Add tests for functions
-Add tests for importing modules
+Add tests for importing modules - src should be a list of source files
+Delete temporary files after testing to keep /test clean
 
 **************IR Trees*************************
 !Big refactor!
